@@ -901,14 +901,35 @@ public class ReportServices {
         log.info("Group orders by productId and calculate total sales per product");
         Map<Long, Double> productSalesMap = orderEntityList.stream().collect(Collectors.groupingBy(OrderEntity::getProductId, Collectors.summingDouble(order -> order.getPriceAfterDiscount() != null ? order.getPriceAfterDiscount() : order.getPrice())));
         log.info(" Prepare the response list with sorted sales data");
-        return productSalesMap.entrySet().stream().map(entry -> buildProductSalesResponse(entry.getKey(), entry.getValue())).sorted(Comparator.comparingDouble(ProductSalesResponse::getTotalSales).reversed()) // Sort by total sales DESC
-                .collect(Collectors.toList());
+        List<ProductSalesResponse> productSalesResponseList = productSalesMap.entrySet().stream().map(entry -> buildProductSalesResponse(entry.getKey(), entry.getValue())).sorted(Comparator.comparingDouble(ProductSalesResponse::getTotalSales).reversed()).toList(); // Sort by total sales DESC.toList();
+        List<Long> productIds = new ArrayList<>();
+        for(ProductSalesResponse productSalesResponse : productSalesResponseList){
+            productIds.add(productSalesResponse.getProductId());
+        }
+        List<ProductRes> productResList = externalRestService.getAllProductByIds(productIds);
+        List<ProductSalesResponse> updatedProductSaleResponseList = new ArrayList<>();
+        for(ProductSalesResponse productSalesResponse : productSalesResponseList){
+            ProductRes productRes = fetchProductResFromList(productResList, productSalesResponse.getProductId());
+            productSalesResponse.setProductName(productRes.getName());
+            productSalesResponse.setSku(productRes.getSku());
+            productSalesResponse.setProductImageUrl(productRes.getImageUrl());
+            updatedProductSaleResponseList.add(productSalesResponse);
+        }
+        return updatedProductSaleResponseList;
+    }
+    private ProductRes fetchProductResFromList(List<ProductRes> productResList, Long productId){
+        for(ProductRes productRes : productResList){
+            if(Objects.equals(productRes.getProductId(), productId)){
+                return productRes;
+            }
+        }
+        return new ProductRes();
     }
     private ProductSalesResponse buildProductSalesResponse(Long productId, Double totalSales) {
         log.info("Get product with product id: {}", productId);
         ProductRes product = productServiceClient.getProduct(productId);
         log.info("Making Response with ProductId, Product Name & total sales");
-        return new ProductSalesResponse(productId, product.getName(), totalSales);
+        return new ProductSalesResponse(productId, product.getName(), totalSales, product.getSku(), product.getImageUrl());
     }
 
     public List<MemberSalesResponse> totalSalesByDateAndSalesLevelAndReportingManagerIdWithGroupByMembers(ReportsRequest reportsRequest,Long reportingManagerId) {
